hildon-libs (0.12.9-1+svn-1) unstable; urgency=low

  * debian/rules: ./configure call, put one argument per line for clarity.
  * debian/rules: call ./autogen.sh to create ./configure

  * N#22557 - Private symbols from gtk+ are not to be used
  * debian/control: N#22557, updated dependency to GTK+ (needs 2.6.10-1.osso4)
	
 -- Luc Pionchon <luc.pionchon@nokia.com>  Sat, 15 Apr 2006 19:16:38 +0300

hildon-libs (0.12.9-1) unstable; urgency=low

  * fixes N#19061 - HildonTimeEditor uses LC_MESSAGES for time separator

  * hildon-grid: set items to be focus-and-activate instead of single tap activation
  * hildon-caption: removed icon for mandatory fields
  * hildon-color-button: pops up selector on 'select' hardkey
  * hildon-color-button: updated button/margin dimensions
  * hildon-time-editor: add automatic focus movement

 -- Luc Pionchon <luc.pionchon@nokia.com>  Thu, 13 Apr 2006 18:19:14 +0300

hildon-libs (0.12.8-1) unstable; urgency=low

  * fixes N#24339 - Information banners do not resize
  * fixes N#26033 - Periodic applications slowdown
  * fixes N#24325 - The menu location is wrong in HildonWindow
  * fixes N#14117 - Infoprints cannot display glyphs for HW keys

  * improved code for bindings
  * hildon-banner: add pango support

 -- Luc Pionchon <luc.pionchon@nokia.com>  Fri,  7 Apr 2006 21:15:28 +0300

hildon-libs (0.12.7-2) unstable; urgency=low

   * debian/control: removed -l10n-english dependency (does not exist (yet))

 -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Fri, 31 Mar 2006 14:22:00 +0300

hildon-libs (0.12.7-1) unstable; urgency=low

   * debian/control (Depends): changed l10n dependency according to the
     new process (marketing releases 'mr')

   * fixes more obsolete logical IDs
   * fixes N#20917 - Unlocalised string in Font Preview window
   * fixes N#24620 - HildonWindow lacking HW key API
   * updated en_BG.po
   * minor code cleanup

 -- Luc Pionchon <luc.pionchon@nokia.com>  Tue, 28 Mar 2006 19:00:26 +0300
