@@ -48,7 +48,7 @@ config.status: $(SOURCE_DIR)/configure
                --disable-gtk-doc
 
 $(SOURCE_DIR)/configure:
-	AUTOGEN_SUBDIR_MODE=1 $(SOURCE_DIR)/autogen.sh
+	AUTOGEN_SUBDIR_MODE=1 NOCONFIGURE=yes $(SOURCE_DIR)/autogen.sh
 
 build: build-stamp
 build-stamp:  config.status
@@ -102,7 +102,11 @@ binary-arch: build install
 	dh_testroot
 	dh_installchangelogs 
 #	dh_installexamples
-	dh_installdocs
+	@if [ "x$(ENABLE_GTK_DOC)" != "x" ]; then \
+	    dh_installdocs;                       \
+	else                                      \
+	    echo "oh nooooooo, no gtk-doc :(";    \
+	fi
 	dh_install --sourcedir=debian/build -v
 #	dh_installmenu
 #	dh_installdebconf	
