@@ -1,5 +1,7 @@
 hildon-libs (0.12.9-1+svn-1) unstable; urgency=low
 
+  * debian/rules: tell ./autogen.sh to not launch ./configure 
+  * debian/rules: install docs only if ENABLE_GTK_DOC is set
   * debian/rules: ./configure call, put one argument per line for clarity.
   * debian/rules: call ./autogen.sh to create ./configure
 
